crates/icydb-schema-derive/tests/ui/primary_key_relation_fail.stderr
error: primary key field 'owner' cannot be a relation (Ref<T> is not a primary key)
  --> tests/ui/primary_key_relation_fail.rs:19:10
   |
19 |     pk = "owner",
   |          ^^^^^^^
